Update craft/core to 0.2.4

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
 	"require": {
 		"php": "^7.1",
 		"ext-gmp": "*",
-		"craft/core": "*"
+		"craft/core": "^0.2.4"
 	},
 	"require-dev": {
 		"ext-gd": "*"
